[package]
name = "erpc-rs"
description = "Rust wrapper for erpc-io's eRPC fast and general-purpose RPC library for datacenter networks"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
authors = ["Wenbo Zhang <Wenbo Zhang@iomesh.com>"]
license = "Apache-2.0"
categories = [ "RPC" ]

[workspace]
members = ["erpc-sys", "erpc-build", "apps/large_rpc_tput_async"]
exclude = ["apps/large_rpc_tput", "examples/hello_world", "examples/hello_world_pb"]

[features]
bench_stat = []

[workspace.dependencies]
prost = { version = "0.12"}
bytes = "1.5.0"

[dependencies]
erpc-sys = { path = "erpc-sys", version = "0.1.0" }
prost.workspace = true
bytes.workspace = true
num_cpus = "1.16.0"
async-channel = "1.9.0"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
