[package]
name = "erpc-sys"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
authors = ["Wenbo Zhang <Wenbo Zhang@iomesh.com>"]
license = "Apache-2.0"
categories = [ "RPC" ]

[dependencies]
autocxx = "0.26.0"
cxx = "1.0"

[build-dependencies]
autocxx-build = "0.26.0"
cc = "1.0"
cmake = "0.1"
miette = { version = "5.10.0", features = ["fancy"] }
pkg-config = "0.3.27"
regex = "1.9.5"
walkdir = "2.4.0"
