[package]
name = "large_rpc_tput"
version = "0.1.0"
authors = [ "Wenbo Zhang <wenbo.zhang@iomesh.com>" ]
edition = "2021"

[dependencies]
erpc-rs = { path = "../..", version = "0.1.0" }
autocxx = "0.26.0"
cxx = "1.0"
libc = "0.2.147"
signal-hook = "0.3.17"
clap = { version = "4.4.2", features = ["derive"] }
core_affinity = "0.8.1"

[build-dependencies]
pkg-config = "0.3.27"
regex = "1.9.5"
