[package]
name = "large_rpc_tput_async"
version = "0.0.1"
authors = [ "Wenbo Zhang <wenbo.zhang@iomesh.com>" ]
edition = "2021"

[dependencies]
erpc-rs = { path = "../..", version = "0.1.0", features = ["bench_stat"] }
autocxx = "0.26.0"
cxx = "1.0"
libc = "0.2.147"
signal-hook = "0.3.17"
clap = { version = "4.4.2", features = ["derive"] }
core_affinity = "0.8.1"
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
prost = "0.12"
async-channel = "1.9.0"
async-trait = "0.1.73"
lazy_static = "1.4.0"

[build-dependencies]
prost-build = "0.12"
erpc-build = { path = "../../erpc-build", version = "0.1.0" }
