[package]
name = "hello_world"
version = "0.1.0"
authors = [ "Wenbo Zhang <wenbo.zhang@iomesh.com>" ]
edition = "2021"

[dependencies]
erpc-rs = { path = "../..", version = "0.1.0" }
autocxx = "0.26.0"
cxx = "1.0"
libc = "0.2.147"

[[bin]]
name = "hello_client"
path = "client.rs"

[[bin]]
name = "hello_server"
path = "server.rs"

[build-dependencies]
pkg-config = "0.3.27"
regex = "1.9.5"
