[package]
name = "hello_world"
version = "0.1.0"
authors = [ "Wenbo Zhang <wenbo.zhang@iomesh.com>" ]
edition = "2021"

[dependencies]
erpc-rs = { path = "../..", version = "0.1.0" }
autocxx = "0.26.0"
cxx = "1.0"
libc = "0.2.147"
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
async-channel = "1.9.0"
crossbeam-channel = "0.5.8"
crossbeam = "0.8.2"

[[bin]]
name = "hello_client"
path = "client.rs"

[[bin]]
name = "hello_server"
path = "server.rs"

[[bin]]
name = "hello_server_async"
path = "server_async.rs"

[build-dependencies]
pkg-config = "0.3.27"
regex = "1.9.5"
